cabal-version:       3.0

name:                advent2019
version:             0.0.0.0
author:              flupe
maintainer:          lucas@escot.me
build-type:          Simple
extra-source-files:  README.md

common aoc
  build-depends: base >=4.12 && <4.13
               , array
               , split
               , containers
  default-language:    Haskell2010
  default-extensions: BlockArguments
                    , ScopedTypeVariables
                    , LambdaCase

executable day1
  import:  aoc
  main-is: day1.hs

executable day2
  import:  aoc
  main-is: day2.hs

executable day3
  import:  aoc
  main-is: day3.hs

executable day4
  import:  aoc
  main-is: day4.hs

executable day5
  import:  aoc
  main-is: day5.hs

executable day6
  import:  aoc
  main-is: day6.hs
